# GUIPlotter

./: README.md  pyproject.toml
src/guiplotter/: __init__.py  __main__.py  data_loader.py  data_models.py  entrypoints.py  plot_app.py
